# embedded-system-monitor

./: LICENSE  README.md  meson.build
config/: monitor.yaml
src/: main.c  meson.build
src/collectors/cpu/: cpu_collector.c  cpu_collector.h  meson.build
src/collectors/irq/: irq_collector.c  irq_collector.h  meson.build
src/collectors/mem/: mem_collector.c  mem_collector.h  meson.build
src/collectors/proc/: meson.build  proc_collector.c  proc_collector.h
src/core/: config.c  config.h  debug.h  meson.build  types.h
src/sink/: meson.build  sink.c  sink.h
src/watchdog/: meson.build  watchdog.c  watchdog.h
yocto/recipe/embedded-monitor/: embedded-monitor_1.0.bb
